testing/framework/resources/Advanced/Failing/mondrian/query5794.q
select product_class.product_family as c0, product_class.product_department as c1 from product as product, product_class as product_class, sales_fact_1997 as sales_fact_1997, time_by_day as time_by_day where product.product_class_id = product_class.product_class_id and sales_fact_1997.product_id = product.product_id and sales_fact_1997.time_id = time_by_day.time_id and time_by_day.the_year = 1997 and time_by_day.week_of_year in (1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52) group by product_class.product_family, product_class.product_department order by sum(sales_fact_1997.store_sales) DESC NULLS LAST, product_class.product_family ASC NULLS LAST, product_class.product_department ASC NULLS LAST;
